monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-internal
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana-internal.pindaroli.org`)
      kind: Rule
      services:
        - name: victoria-monitoring-grafana
          port: 80
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-external
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.pindaroli.org`)
      kind: Rule
      middlewares:
        - name: oauth2-auth
          namespace: traefik
      services:
        - name: victoria-monitoring-grafana
          port: 80
  tls:
    secretName: pindaroli-wildcard-tls
